// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferCardBookmark should render correctly OfferCardBookmark should render correctly when  isAuthorizedStatus={false} and offerBookmarkStatus={false} 1`] = `
<a
  className="place-card__bookmark-button
         button"
  href="/login"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To
     bookmarks
  </span>
</a>
`;

exports[`OfferCardBookmark should render correctly OfferCardBookmark should render correctly when  isAuthorizedStatus={true} and offerBookmarkStatus={false} 1`] = `
<button
  className="place-card__bookmark-button button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To
     bookmarks
  </span>
</button>
`;

exports[`OfferCardBookmark should render correctly OfferCardBookmark should render correctly when isAuthorizedStatus={false} and offerBookmarkStatus={true} 1`] = `
<a
  className="place-card__bookmark-button
         place-card__bookmark-button--active button"
  href="/login"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In
     bookmarks
  </span>
</a>
`;

exports[`OfferCardBookmark should render correctly OfferCardBookmark should render correctly when isAuthorizedStatus={true} and offerBookmarkStatus={true} 1`] = `
<button
  className="place-card__bookmark-button place-card__bookmark-button--active button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In
     bookmarks
  </span>
</button>
`;
